--- a/music.css
+++ b/music.css
@@ -1,6 +1,15 @@
 .container {
-          margin: 3rem 3rem 3rem 3rem;
+          margin-top: 3rem;
+          margin-bottom: 3rem;
           cursor: pointer;
+}
+.container .input{
+          margin-right: 10px;
+          margin-bottom: 15px;
+          cursor: pointer;
+}
+.container .button{
+          margin-bottom: 15px;
 }
 
 #searchbox {
