--- a/music.css
+++ b/music.css
@@ -3,16 +3,32 @@
           margin-bottom: 3rem;
           cursor: pointer;
 }
-.container .input{
-          margin-right: 10px;
+
+.container .navbar {
+          width: 100%;
+          height: 100px;
+          background-color: rgb(56, 50, 50);
+          margin-bottom: 3px;
+}
+
+.container img {
+          margin-left: 10px;
+          width: 70px;
+          height: 70px;
+}
+
+.container .input {
+          margin-left: 400px;
           margin-bottom: 15px;
           cursor: pointer;
 }
-.container .button{
+
+.container .button {
+          margin-right: 500px;
           margin-bottom: 15px;
 }
 
-#searchbox {
+.container .input #searchbox {
           width: 200px;
           height: 37px;
           border-radius: 5px;
