--- a/music.css
+++ b/music.css
@@ -126,7 +126,28 @@
           }
 
           .container .navbar .searchboxSubmit .input {
-                    margin-left: 60px;
+                    margin-left: 3rem;
+                    margin-right: 2rem;
+                    margin-top: -2rem;
+          }
+
+          .container .navbar .searchboxSubmit .button {
+                    margin-top: 2rem;
+                    position: relative;
+                    right: 10rem;
+                    bottom: 1rem;
+          }
+}
+
+@media screen and (max-width: 295px) {
+          .container .navbar a img {
+                    width: 30px;
+                    height: 30px;
+                    margin-left: 3px;
+          }
+
+          .container .navbar .searchboxSubmit .input {
+                    margin-left: 2.1rem;
                     margin-top: -2rem;
           }
 
