--- a/music.css
+++ b/music.css
@@ -109,6 +109,26 @@
           }
 }
 
+@media screen and (max-width: 398px) {
+          .container .navbar a img {
+                    width: 30px;
+                    height: 30px;
+          }
+
+          .container .navbar .searchboxSubmit .input {
+                    margin-left: 3rem;
+                    margin-right: 2rem;
+                    margin-top: -2rem;
+          }
+
+          .container .navbar .searchboxSubmit .button {
+                    margin-top: 2rem;
+                    position: relative;
+                    right: 10rem;
+                    bottom: 1rem;
+          }
+}
+
 
 .container img {
           margin-left: 10px;
