--- a/music.css
+++ b/music.css
@@ -1,3 +1,14 @@
+#loading {
+          position: fixed;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background: #fff url('../image/1494.gif') no-repeat center;
+          z-index: 9999;
+}
+
+
+
 .container {
           margin-top: 3rem;
           margin-bottom: 3rem;
