--- a/music.css
+++ b/music.css
@@ -3,7 +3,7 @@
           top: 0;
           width: 100%;
           height: 100%;
-          background: #fff url('../image/1494.gif') no-repeat center;
+          background: #fff url('Loading_icon.gif') no-repeat center;
           z-index: 9999;
 }
 
